# ultra-portable-vital-monitoring

./: .gitignore  .gitignore.swp  README.md
firmware/: CMakeLists.txt  prj.ZDebug.conf  prj.common.conf
firmware/boards/: nrf52dk_nrf52832.overlay  vital_monitor_nrf52832.overlay
firmware/boards/arm/vital_monitor_nrf52832/: Kconfig  Kconfig.board  Kconfig.defconfig  vital_monitor-defines.dtsi  vital_monitor_nrf52832-defines.dtsi  vital_monitor_nrf52832-pinctrl.dtsi  vital_monitor_nrf52832.dts  vital_monitor_nrf52832.yaml  vital_monitor_nrf52832_defconfig
firmware/dts/bindings/: ad469x,custom-settings.yaml  ad469x-sequencer,settings.yaml  afe-settings,custom-settings.yaml  afl240320a0_binding.yaml  lc709204f,custom-settings.yaml  vital-monitor,bluetooth-settings.yaml
firmware/source/: CMakeLists.txt  main.c  vital_app.c  vital_bluetooth.c  vital_gatt.c
firmware/source/components/: CMakeLists.txt  bsp.c  bsp_accelerometer.c  bsp_ad469x.c  bsp_adc.c  bsp_battery_gauge.c  bsp_display.c  bsp_fft.c  bsp_ppg.c  bsp_respiration.c  bsp_sensor_interface.c  bsp_thermometer.c
firmware/source/components/includes/: bsp.h  bsp_accelerometer.h  bsp_ad469x.h  bsp_ad469x_calibrations.h  bsp_adc.h  bsp_battery_gauge.h  bsp_display.h  bsp_fft.h  bsp_ppg.h  bsp_respiration.h  bsp_sensor_interface.h  bsp_std_includes.h  bsp_thermometer.h  zephyr_typedefs.h
firmware/source/fonts/: times_16pt_rgb565.h
firmware/source/includes/: main.h  vital_app.h  vital_bluetooth.h  vital_defines.h  vital_gatt.h
